--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,4 +121,71 @@ nav.subbar > ul.nav.nav-tabs > li.active > a {
   margin-top: 14px;
   margin-bottom: 14px;
 }
+
+/*Inventory*/
+#custom-search-input{
+    padding: 3px;
+    border: solid 1px #E4E4E4;
+    border-radius: 6px;
+    background-color: #fff;
+}
+
+#custom-search-input input{
+    border: 0;
+    box-shadow: none;
+}
+
+#custom-search-input button{
+    margin: 2px 0 0 0;
+    background: none;
+    box-shadow: none;
+    border: 0;
+    color: #666666;
+    padding: 0 8px 0 10px;
+    border-left: solid 1px #ccc;
+}
+
+#custom-search-input button:hover{
+    border: 0;
+    box-shadow: none;
+    border-left: solid 1px #ccc;
+}
+
+#custom-search-input .glyphicon-search{
+    font-size: 14px;
+}
+
+.inventory{
+  padding: 0px;
+  height: 375px;
+  overflow-y: scroll;
+}
+.inventory::-webkit-scrollbar {
+  width: 5px;
+  height: 8px;
+  background-color: #aaa;
+}
+.inventory::-webkit-scrollbar-thumb {
+    background: #000;
+}
+.btn-circle {
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 20px;
+}
+
+.btn-add{
+  position: absolute;
+  top: 420px;
+  right: 35px;
+}
+
+span.btn-group{
+  font-size: 12px;
+  padding-right: 7px;
+  cursor: pointer;
 }
