--- a/assets/components/dashboard/index.html
+++ b/assets/components/dashboard/index.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-6 col-sm-3">
       <div class="panel panel-primary">
-        <div class="panel-body">
+        <div class="panel-body" ng-click="testing()">
           <br>
           <br>
           <br>
