--- a/assets/components/pos/index.html
+++ b/assets/components/pos/index.html
@@ -1,3 +1,62 @@
 <section class="tab-pane active fade in content" id="pos">
-  <h1>test</h1>
+  <div class="col-xs-12 col-sm-5">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <div id="custom-search-input">
+            <div class="input-group col-md-12">
+                <input type="text" class="form-control input-sm" placeholder="Search for..." ng-model="inventory" style="height:13px;"/>
+            </div>
+        </div>
+      </div>
+      <div class="panel-body pos">
+        <div class="list-group">
+          <a class="list-group-item" style="border-radius:0px; cursor:pointer;" ng-repeat="x in inventories | filter:inventory">
+            <div class="media">
+              <span class="pull-right">
+                <span class="label label-warning" style="margin-right:7px; font-size:10px;">{{ x.stock }}</span>
+              </span>
+              <div class="pull-left">
+                <img class="media-object" src="http://placehold.it/55x40" alt="Image">
+              </div>
+              <div class="media-body">
+                <h5 class="media-heading">{{ x.name }}</h5>
+                <span class="label label-success" style="margin-right:7px; font-size:8px;">SP : {{ x.sell_price }}</span>
+              </div>
+            </div>
+            <div class="clearfix"></div>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        Test
+      </div>
+      <div class="panel-body">
+        <br>
+        <br>
+        <br>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-xs-12 col-sm-7">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <center>Inv</center>
+      </div>
+      <div class="panel-body pos-invoice">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+      </div>
+    </div>
+  </div>
 </section>
