--- a/assets/components/pos/index.html
+++ b/assets/components/pos/index.html
@@ -16,7 +16,7 @@
                 <span class="label label-warning" style="margin-right:7px; font-size:10px;">{{ x.stock }}</span>
               </span>
               <div class="pull-left">
-                <img class="media-object" src="http://placehold.it/55x40" alt="Image">
+                <img class="media-object" width="55" height="40" src="./assets/images/55x40.png" alt="Image">
               </div>
               <div class="media-body">
                 <h5 class="media-heading">{{ x.name }}</h5>
