--- a/assets/components/dashboard/index.html
+++ b/assets/components/dashboard/index.html
@@ -43,7 +43,7 @@
     <div class="col-xs-12 col-sm-9">
       <div class="panel panel-default">
         <div class="panel-heading">
-          Notifications
+          <strong>Notifications</strong>
         </div>
         <div class="panel-body" style="height:262px; padding:0px; overflow-y:scroll">
           <div class="alert" ng-class="{'alert-warning':x.nofStat=='Warning!', 'alert-danger':x.nofStat=='Danger!'}" style="margin-bottom:0px; border-radius:0px !important; padding:12px" ng-repeat="x in notifications">
@@ -55,23 +55,18 @@
     <div class="col-xs-12 col-sm-3">
       <div class="panel panel-default">
         <div class="panel-heading">
-          Test
+          <strong>Top 5 Sales</strong>
         </div>
-        <div class="panel-body">
-          <br>
-          <br>
-          <br>
-          <br>
+        <div class="panel-body" style="height:100px">
+
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-heading">
-          Test
+          <strong>Top 5 Revenue</strong>
         </div>
-        <div class="panel-body">
-          <br>
-          <br>
-          <br>
+        <div class="panel-body" style="height:100px">
+
         </div>
       </div>
     </div>
