--- a/assets/components/dashboard/index.html
+++ b/assets/components/dashboard/index.html
@@ -57,16 +57,20 @@
         <div class="panel-heading">
           <strong>Top 5 Sales</strong>
         </div>
-        <div class="panel-body" style="height:100px">
-
+        <div class="panel-body" style="height:100px; padding:0px; overflow-y:scroll">
+          <div class="alert alert-success" style="margin-bottom:0px; border-radius:0px !important; padding:10px; font-size:11px" ng-repeat="x in top5Sales">
+            <strong>{{x.name}}</strong> {{x.sales}}
+          </div>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-heading">
           <strong>Top 5 Revenue</strong>
         </div>
-        <div class="panel-body" style="height:100px">
-
+        <div class="panel-body" style="height:100px; padding:0px; overflow-y:scroll">
+          <div class="alert alert-info" style="margin-bottom:0px; border-radius:0px !important; padding:10px; font-size:11px" ng-repeat="x in top5Revenue">
+            <strong>{{x.name}}</strong> {{x.revenue | currency: 'Rp. '}}
+          </div>
         </div>
       </div>
     </div>
