--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,3 +307,14 @@ input.hideArrow::-webkit-inner-spin-button {
     height: 34px;
     width: 34px;
 }
+
+/*Dashboard*/
+.scrollbar::-webkit-scrollbar{
+  width: 5px;
+  height: 8px;
+  background-color: #aaa;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+    background: #000;
+}
